@@ -7,7 +7,7 @@ INCLUDES = \
 	$(GNOME_INCLUDEDIR)
 
 gnocatan_server_DEPENDENCIES = ../common/libgnocatan.a \
-	../common/libgnocatan_gui.a
+	../common/libgnocatan_gtk.a
 
 gnocatan_server_SOURCES = \
 	buildutil.c \
@@ -26,7 +26,7 @@ gnocatan_server_SOURCES = \
 
 gnocatan_server_LDADD = \
 	../common/libgnocatan.a \
-	../common/libgnocatan_gui.a \
+	../common/libgnocatan_gtk.a \
 	$(GNOME_LIBDIR) \
 	$(GNOMEUI_LIBS)
 
